# Dev_CCLib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeSettings_linux.json  CMakeSettings_win.json  Dev_CCLib.sln  MyGlobalImports.cmake  MyLocalImports.cmake  README.md  imx8mm-toolchain.cmake
Bat/: SharedMemory.bat  SharedMemoryClient.bat  SharedMemoryPeer1.bat  SharedMemoryPeer2.bat  SharedMemoryServer.bat  run_SharedMemory.bat
BlockPool/: BlockPool.vcxproj  BlockPool.vcxproj.filters
CCLib/: CCLib.vcxproj  CCLib.vcxproj.filters  CMakeLists.txt  ccBlockPoolBase.h  ccBlockPoolBaseIndexStack.h  ccCallPointer.h  ccCritcalSection_linux.cpp  ccLCObjectQueue.cpp  ccLCPointerQueue.cpp  ccLCValueQueue.h  ccRingBuffer.cpp  ccRingBuffer.h  ccRingBufferEx.h
CCLib/Source/: GenerateTreeNodes.cpp  GenerateTreeNodes.h  ccBaseFreeListIndexStack.h  ccBlockArray.cpp  ccBlockArray.h  ccBlockBoxArray.cpp  ccBlockBoxArray.h  ccBlockHandle.cpp  ccBlockHandle.h  ccBlockHeader.h  ccBlockPool.cpp  ccBlockPool.h  ccBlockPoolBase.cpp  ccBlockPoolBase.h  ccBlockPoolBaseIndexStack.h  ccBlockPoolBlock.h  ccBlockPoolBlockIntrusive.h  ccBlockPoolBlockNonIntrusive.h  ccBlockPoolCentral.cpp  ccBlockPoolCentral.h  ccBlockPoolFaster.cpp  ccBlockPoolFaster.h  ccBlockPoolFreeList.cpp  ccBlockPoolFreeList.h  ccBlockPoolIndex.h  ccBlockPoolIndexStack.cpp  ccBlockPoolIndexStack.h  ccBlockPoolLFFreeList.cpp  ccBlockPoolLFFreeList.h  ccBlockPoolLFIndexStack.cpp  ccBlockPoolLFIndexStack.h  ccBlockPoolLMFreeList.cpp  ccBlockPoolLMFreeList.h  ccBlockPoolLMIndexStack.cpp  ccBlockPoolLMIndexStack.h  ccBlockPoolList.cpp  ccBlockPoolList.h  ccBlockPoolLongTerm.cpp  ccBlockPoolLongTerm.h  ccBlockPoolParms.cpp  (+72 more)
Classes/: CMakeLists.txt  Classes.vcxproj  Classes.vcxproj.filters  someClass1.h  someClass2.cpp  someClass2.h  someClass3.h
CommonLib/: cmnDefs.cpp  cmnDefs.h  cmnPriorities.h  cmnPriorities_linux.cpp  cmnPriorities_win.cpp  risMemMap.h  risMemMap_linux.cpp  someMemoryParms.cpp  someMemoryParms.h  sysTimetag.cpp  sysTimetag.h
Concurrent/: CMakeLists.txt  CmdLineExec.cpp  Concurrent.vcxproj  Concurrent.vcxproj.filters  MainInit.cpp  Parms.cpp  SoftDelay.h  ccRingBuffer.cpp  ccRingBuffer.h  someReader.cpp  someShare.cpp  someShare.h  someStatusThread.cpp  someTestRecord.cpp  someTestRecord.h  someTestRingBuffer.cpp  someTestRingBuffer.h  someTestTester.cpp  someTestTester.h  someTester.cpp  someTesterThread.cpp  someThreads.cpp  someThreads.h  someWriter.cpp
Concurrent/Source/: CmdLineExec.cpp  CmdLineExec.h  GSettings.cpp  GSettings.h  LFFreeList.cpp  LFFreeList.h  LFIndex.h  LFIntQueue.cpp  LFIntQueue.h  Main.cpp  MainInit.cpp  MainMemory.cpp  RisIntQueue.cpp  RisIntQueue.h  Timing.cpp  Timing.h  aaa_copyfiles.bat  someBlockPoolIndex.h  someClass1.cpp  someClass1.h  someMessage.cpp  someMessage.h  someMyBlockA.cpp  someMyBlockA.h  someMyBlockC.cpp  somePart.cpp  somePart.h  someReader.cpp  someReader.h  someReaderThread.cpp  someReaderThread.h  someShare.cpp  someShare.h  someStatusThread.cpp  someStatusThread.h  someTester.cpp  someTester.h  someTesterThread.cpp  someTesterThread.h  someThread1.cpp  (+12 more)
Containers/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Containers.vcxproj  Containers.vcxproj.filters  MainInit.cpp  someClass1.cpp  someClass1.h
Counter/: CMakeLists.txt  CmdLineExec.cpp  Counter.vcxproj  Counter.vcxproj.filters  MainInit.cpp  ModuloMN_PowerOfTwo.h  ccCounter.cpp  ccCounter.h
Delete/: CMakeLists.txt  Delete.vcxproj  Delete.vcxproj.filters
Documents/: release_notes.txt
Fifo/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  ccFifo.h
Files/: ConcurrentSettings.txt  Concurrent_Parms.txt  SharedMemorySettings.txt  aaa_concurrent.bat
History/: CMakeLists.txt  History.vcxproj  History.vcxproj.filters
LFCCLib/: LFCCLib.vcxproj  ccBlockPoolParms.cpp  ccBlockPoolParms.h  ccCritcalSection_win.cpp  ccLCValueQueue.h  ccLFPointerQueue.h
LFConcurrent/: CMakeLists.txt  LFConcurrent.vcxproj  MainMemory.cpp  someShare.cpp  someShare.h  someStatusThread.cpp  someWriter.cpp
LFQueue/: LFQueue.vcxproj  LFQueue.vcxproj.filters
LLogic/: CMakeLists.txt  LLogic.vcxproj  LLogic.vcxproj.filters
Labelled/: CMakeLists.txt  CmdLineExec.cpp  Labelled.vcxproj  Labelled.vcxproj.filters  (+2 more)
LockFree/: CMakeLists.txt  LockFree.vcxproj  LockFree.vcxproj.filters  MainInit.cpp
LockFree/Source/: CmdLineExec.cpp  CmdLineExec.h  KMessageLFQueue.c  KMessageLFQueue.h  LFAtomic.h  LFBackoff.cpp  LFBackoff.h  LFBlockQueue.cpp  LFBlockQueue.h  LFDelay.h  LFFreeList.cpp  LFFreeList.h  LFIndex.h  LFIntQueue.cpp  LFIntQueue.h  LFIntQueueMS.cpp  LFIntQueueMS.h  LFIntQueueMSCP.cpp  LFIntQueueMSCP.h  LFIntQueueTC.cpp  LFIntQueueTC.h  LFQueue.cpp  LFQueue.h  LockFree.h  MSIntQueue.cpp  MSIntQueue.h  Timing.cpp  Timing.h  ccCount.cpp  ccCount.h  ccIntegerStack.cpp  ccIntegerStack.h  ccLFBounded.cpp  ccLFBounded.h  ccLFCount.cpp  ccLFCount.h  ccLFIndex.cpp  ccLFIndex.h  ccTokenStack.cpp  ccTokenStack.h
MyBlock/: CMakeLists.txt  MainInit.cpp  MainMemory.cpp  MyBlock.vcxproj  MyBlock.vcxproj.filters
MyBlock/Source/: CmdLineExec.cpp  CmdLineExec.h  MainInit.cpp  MainMemory.cpp  ccBlockPool.cpp  ccBlockPool.h  ccBlockPoolBase.h  ccBlockPoolLongTerm.cpp  ccMemBaseBlockPool.h  ccMemBlockBoxArray.h  ccMemPoolIndex.h  someBlockPoolIndex.h  someMyBlock.cpp  someMyBlock.h  someMyBlockA.cpp  someMyBlockA.h  someMyBlockB.cpp  someMyBlockB.h  someMyBlockC.cpp  someMyBlockC.h  someMyBlockD.cpp  someMyBlockD.h  someMyBlockR.cpp  someMyBlockR.h  someMyBlockS.cpp  someMyBlockS.h
ShareLib/: CMakeLists.txt  aaa_copy_from.bat  aaa_copy_to.bat  ccIntrinsics.h  ccRingBuffer.cpp  ccSRSWObjectQueue.h  cmnPaths.cpp  cmnPaths.h  smShare.cpp  smShare.h  smShareParms.cpp  smShareParms.h  smShare_class.cpp  smShare_linux.cpp  smShare_win.cpp  smSynch.cpp  smSynch.h  smVersion.h  someClass1.cpp  someClass1.h  someRingParms.cpp  someRingParms.h  someStateSX.cpp  someStateSX.h  someTestRecord.cpp  someTestRecord.h  someTestRing.cpp  someTestRingBuffer.cpp  someTestRingBuffer.h  someTestTester.cpp  someTestTester.h  stdafx.h
(+603 files in other folders)
